# py-ivm

./: .gitignore  README.md  flake.nix  pyproject.toml
py/ivm/: __init__.py  compat.py  debugger.py  extrinsics.py  globals.py  heap.py  host.py  lexer.py  parser.py  readback.py  runner.py  serialize.py  tree.py  vm.py
tests/: conftest.py  test_extrinsics.py  test_lexer.py  test_programs.py  test_readouts.py  test_vm.py
tests/programs/: cat.iv  fizzbuzz.iv  hihi.iv
